decafcomp/llvm/test/variableoverride.llvm.bc.err
/usr/lib/llvm-8/bin/llvm-as: llvm/test/variableoverride.llvm:31:7: error: value doesn't match function result type 'i32'
  ret void
      ^
