decafcomp/llvm/test/variableoverride.llvm
; ModuleID = 'variableoverride'
source_filename = "Test"

declare void @print_int(i32)

declare void @print_string(i8*)

define i32 @main() {
entry:
  %main = alloca i32
  store i32 0, i32* %main
  store i32 2, i32* %main
  br label %if

if:                                               ; preds = %entry
  %main1 = load i32, i32* %main
  %tempLt = icmp slt i32 %main1, 3
  br i1 %tempLt, label %ifTrue, label %ifEnd

ifTrue:                                           ; preds = %if
  %main2 = alloca i1
  store i1 false, i1* %main2
  %main3 = load i1, i1* %main2
  %tmpNot = xor i1 %main3, true
  store i1 %tmpNot, i1* %main2
  br label %ifEnd

ifEnd:                                            ; preds = %ifTrue, %if
  %main4 = load i32, i32* %main
  call void @print_int(i32 %main4)
  ret void
  ret i32 0
}
